# soft-quota-py

./: .gitignore  README.md  pyproject.toml
soft_quota/: __init__.py  exceptions.py  models.py  repositories.py  service.py  time_window.py
tests/: conftest.py  test_service.py  test_time_window.py
